git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@11 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/NAMESPACE
+++ b/pkg/synchronicity/NAMESPACE
@@ -8,6 +8,5 @@ exportClasses(
 exportMethods(
   lock, 
   unlock, 
-  lock.sharable, 
-  unlock.sharable)
+  lock.shared)
 useDynLib(synchronicity)
