git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@12 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/NAMESPACE
+++ b/pkg/synchronicity/NAMESPACE
@@ -7,6 +7,10 @@ exportClasses(
   boost.named.sharable.timed.lock.call)
 exportMethods(
   lock, 
-  unlock, 
-  lock.shared)
+  try.lock,
+  lock.shared,
+  try.lock.shared,
+  unlock,
+  unlock.shared,
+  destroy.resource)
 useDynLib(synchronicity)
