git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@28 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -6,6 +6,7 @@ exportClasses(big.matrix)
 export(big.matrix,
        filebacked.big.matrix,
        attach.big.matrix,
+       attach.resource,
        sub.big.matrix,
        deepcopy)
 
