git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@40 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/NAMESPACE
+++ b/pkg/synchronicity/NAMESPACE
@@ -1,16 +1,12 @@
 import(methods)
-export(uuid)
+export(uuid,boost.mutex)
 exportClasses(
-  named.exclusive.lock.call,
-  named.sharable.lock.call,
-  boost.named.sharable.lock.call,
-  boost.named.sharable.timed.lock.call)
+  mutex,
+  boost.mutex)
 exportMethods(
   lock, 
-  try.lock,
   lock.shared,
-  try.lock.shared,
   unlock,
-  unlock.shared,
-  destroy.resource)
+  is.timed,
+  resource.name)
 useDynLib(synchronicity)
