git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@41 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -1,7 +1,7 @@
 import(methods)
 importFrom(utils, head, tail)
 
-exportClasses(big.matrix)
+exportClasses(big.matrix, big.matrix.descriptor)
 
 export(big.matrix,
        filebacked.big.matrix,
