--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: bigmemory
 Version: 4.0
-Date: 2009-10-07
+Date: 2009-10-31
 Title: Manage massive matrices with support for shared memory and memory-mapped files.
-Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
-Maintainer: John W. Emerson <john.emerson@yale.edu>
+Author: Michael J. Kane and John W. Emerson
+Maintainer: Jay Emerson and Mike Kane <bigmemoryauthors@gmail.com>
 Depends: methods, utils
-Description: Create, store, access, and manipulate massive matrices.  Matrices may
-  optionally be allocated to shared memory and/or may use memory-mapped files.  Packages
+Description: Create, store, access, and manipulate massive matrices.  Matrices are
+  allocated to shared memory and may use memory-mapped files.  Packages
   biganalytics, synchronicity, and bigalgebra provide advanced functionality.
 License: LGPL-3
 Copyright: (C) 2009 John W. Emerson and Michael J. Kane
