git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@45 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/NAMESPACE
+++ b/pkg/synchronicity/NAMESPACE
@@ -8,5 +8,7 @@ exportMethods(
   lock.shared,
   unlock,
   is.timed,
-  resource.name)
+  shared.name,
+  describe,
+  attach.resource)
 useDynLib(synchronicity)
