--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -2,11 +2,11 @@ Package: synchronicity
 Type: Package
 Title: What the package does (short line)
 Version: 1.0
-Date: 2009-07-12
+Date: 2009-11-01
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Depends: methods
 Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
-Description: More about what it does (maybe more than one line)
+Description: This package provides boost mutex functionality in R.
 License: LGPL-3
 Copyright: (C) 2009 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
