--- a/pkg/synchronicity/NAMESPACE
+++ b/pkg/synchronicity/NAMESPACE
@@ -2,12 +2,15 @@ import(methods)
 export(uuid,boost.mutex)
 exportClasses(
   mutex,
-  boost.mutex)
+  boost.mutex,
+  descriptor,
+  boost.mutex.descriptor)
 exportMethods(
   lock, 
   lock.shared,
   unlock,
   is.timed,
+  timeout,
   shared.name,
   describe,
   attach.resource)
