git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@49 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: synchronicity
 Type: Package
-Title: What the package does (short line)
+Title: This package provides boost mutex functionality in R.
 Version: 1.0
 Date: 2009-11-01
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
