--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: bigmemory
-Version: 4.0.2
-Date: 2009-10-31
+Version: 4.0.3
+Date: 2010-02-04
 Title: Manage massive matrices with support for shared memory and memory-mapped files.
 Author: Michael J. Kane and John W. Emerson
 Maintainer: Jay Emerson and Mike Kane <bigmemoryauthors@gmail.com>
 Depends: methods, utils
-Description: Create, store, access, and manipulate massive matrices.  Matrices are
-  allocated to shared memory and may use memory-mapped files.  Packages
-  biganalytics, synchronicity, and bigalgebra provide advanced functionality.
+Suggests: biganalytics
+Description: Create, store, access, and manipulate massive matrices.
+  Matrices are allocated to shared memory and may use memory-mapped
+  files.  Packages biganalytics, synchronicity, and bigalgebra provide
+  advanced functionality.
 License: LGPL-3
-Copyright: (C) 2009 John W. Emerson and Michael J. Kane
+Copyright: (C) 2010 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
