--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.3
 Date: 2009-06-09
 Author: Michael Kane
 Maintainer: Who to complain to <kaneplusplus@gmail.com>
-Depends: bigmemory (>= 4.0.0)
+Imports: bigmemory (>= 4.0.0)
 Description: This package provides linear algebra routines for R matrix and big.matrix objects with side-effects using BLAS and LAPACK libraries.
 License: LGPL
 LazyLoad: yes
