--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: biganalytics
 Type: Package
 Title: A library of utilities for big.matrix objects of package bigmemory.
-Version: 1.0
-Date: 2009-06-02
+Version: 1.0.1
+Date: 2010-03-07
 Author: Michael J. Kane and John W. Emerson
 Maintainer: John W. Emerson <john.emerson@yale.edu>
-Depends: methods, stats, utils
-Imports: bigmemory, biglm
+Depends: methods, stats, utils, bigmemory
+Suggests: foreach, biglm
 Description: This package extends the bigmemory package with various analytics.
 License: LGPL-3
