git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@87 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -24,7 +24,8 @@ exportMethods("[", "[<-",
               is.separated,
               is.filebacked,
               is.sub.big.matrix,
-              apply)
+              apply,
+              flush)
 
 useDynLib(bigmemory)
 
