--- a/pkg/bigalgebra/NAMESPACE
+++ b/pkg/bigalgebra/NAMESPACE
@@ -1,4 +1,10 @@
 importFrom("bigmemory", "typeof")
-export("dgemm", "dcopy", "dscal", "daxpy", "dgesdd", "dgeqrf", "dpotrf", 
+export("dgemm", 
+  "dcopy", 
+  "dscal", 
+  "daxpy", 
+  "dgesdd", 
+  "dgeqrf", 
+  "dpotrf", 
   "dgeev")
 useDynLib(bigalgebra)
