git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@104 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -10,7 +10,8 @@ export(big.matrix,
        deepcopy)
 
 exportMethods("[", "[<-",
-              dimnames, 
+              dimnames,
+              length,
               nrow, ncol,
               print,
               head, tail,
