git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@105 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -26,7 +26,8 @@ exportMethods("[", "[<-",
               is.filebacked,
               is.sub.big.matrix,
               apply,
-              flush)
+              flush,
+              is.shared)
 
 useDynLib(bigmemory)
 
