--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: bigtabulate
-Type: Package
+Version: 1.0.2
+Date: 2010-03-31
 Title: tapply() juiced up for matrix and big.matrix objects.
-Version: 1.0.1
-Date: 2010-03-30
-Author: John W. Emerson and Michael J. Kane
-Maintainer: John W. Emerson <john.emerson@yale.edu>
+Author: John W. Emerson <jayemerson@gmail.com> and Michael J. Kane <kaneplusplus@gmail.com>
+Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, foreach
-Suggests: bigmemory
+Suggests: bigmemory, biganalytics
 Description: This package extends the bigmemory package with tapply()-like behavior.
-License: LGPL-3
+License: LGPL-3Copyright: (C) 2010 John W. Emerson and Michael J. Kane
+URL: http://www.bigmemory.org
+LazyLoad: yes
