--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: bigmemory
 Version: 4.1.1
-Date: 2010-04-06
+Date: 2010-04-07
 Title: Manage massive matrices with support for shared memory and memory-mapped files.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, utils
-Suggests: biganalytics
+Suggests: biganalytics, bigtabulate
 Description: Create, store, access, and manipulate massive matrices.
   Matrices are allocated to shared memory and may use memory-mapped
-  files.  Packages biganalytics, synchronicity, and bigalgebra provide
-  advanced functionality.
+  files.  Packages biganalytics, bigtabulate, synchronicity, and
+  bigalgebra provide advanced functionality.
 License: LGPL-3
 Copyright: (C) 2010 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
