git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@155 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bigmemory
-Version: 4.1.1
+Version: 4.1.2
 Date: 2010-04-07
-Title: Manage massive matrices with support for shared memory and memory-mapped files.
+Title: Manage massive matrices with shared memory and memory-mapped files.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, utils
