--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: biganalytics
-Version: 1.0.5
-Date: 2010-03-31
+Version: 1.0.6
+Date: 2010-04-07
 Title: A library of utilities for big.matrix objects of package bigmemory.
 Author: John W. Emerson <jayemerson@gmail.com> and Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, stats, utils, bigmemory
-Suggests: foreach, biglm
+Suggests: foreach, biglm, bigtabulate
 Description: This package extends the bigmemory package with various analytics.
+  Package bigtabulate might also be of interest.
 License: LGPL-3
 Copyright: (C) 2010 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.orgLazyLoad: yes
