--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: bigalgebra
-Type: Package
-Title: This package provides linear algebra routines for R matrix and big.matrix objects.
-Version: 0.3
+Version: 0.4
 Date: 2010-04-08
-Author: Michael Kane
+Title: BLAS and LAPACK routines for R matrix and big.matrix objects.
+Author: Michael J. Kane, John W. Emerson, and Bryan Lewis
 Maintainer: Mike <kaneplusplus@gmail.com>
 Imports: bigmemory (>= 4.0.0)
-Description: This package provides linear algebra routines for R matrix and big.matrix objects
-  with side-effects using BLAS and LAPACK libraries.
-License: LGPL
+Description: This package provides BLAS and LAPACK routines for R matrix
+  and big.matrix objects.
+License: LGPL-3
+Copyright: (C) 2010 Michael J. Kane, John W. Emerson, and Bryan Lewis
+URL: http://www.bigmemory.org
 LazyLoad: yes
 
