--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -7,7 +7,8 @@ Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, stats, utils, bigmemory (>= 4.0.0)
 Suggests: foreach, biglm, bigtabulate
 Description: This package extends the bigmemory package with various analytics.
-  Package bigtabulate may also be helpful.
+  Some of the functions may also be used with native R objects, and package
+  bigtabulate may also be helpful.
 License: LGPL-3
 Copyright: (C) 2010 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.orgLazyLoad: yes
