--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Michael J. Kane <kaneplusplus@gmail.com>
 Depends: methods
 Description: This package provides Boost mutex functionality in R.
+OS_type: unix
 License: LGPL-3
 Copyright: (C) Michael J. Kane
 URL: http://www.bigmemory.org
