git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@199 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -2,13 +2,13 @@ Package: bigalgebra
 Version: 0.4
 Date: 2010-04-08
 Title: BLAS and LAPACK routines for native R matrices and big.matrix objects.
-Author: Michael J. Kane, John W. Emerson, and Bryan Lewis
-Maintainer: Mike <kaneplusplus@gmail.com>
+Author: Michael J. Kane, Bryan Lewis, and John W. Emerson
+Maintainer: Mike <bigmemoryauthors@gmail.com>
 Imports: bigmemory (>= 4.0.0)
 Description: This package provides BLAS and LAPACK routines for R matrix
   and big.matrix objects.
 License: LGPL-3
-Copyright: (C) 2010 Michael J. Kane, John W. Emerson, and Bryan Lewis
+Copyright: (C) 2010 Michael J. Kane, Bryan Lewis, and John W. Emerson
 URL: http://www.bigmemory.org
 LazyLoad: yes
 
