git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@200 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: synchronicity
-Version: 1.0.3
-Date: 2010-03-31
+Version: 1.0.4
+Date: 2010-04-10
 Title: Boost mutex functionality for R.
 Author: Michael J. Kane <kaneplusplus@gmail.com>
-Maintainer: Michael J. Kane <kaneplusplus@gmail.com>
+Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Depends: methods
 Description: This package provides Boost mutex functionality in R.
 OS_type: unix
