--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -7,8 +7,9 @@ Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, stats, utils, bigmemory (>= 4.0.0)
 Suggests: foreach, biglm, bigtabulate
 Description: This package extends the bigmemory package with various analytics.
-  Some of the functions may also be used with native R objects, and package
-  bigtabulate may also be helpful.
+  Functions bigkmeans and binit may also be used with native R objects. 
+  For tapply-like functions, the bigtabulate package may also be helpful.
 License: LGPL-3
 Copyright: (C) 2010 John W. Emerson and Michael J. Kane
-URL: http://www.bigmemory.orgLazyLoad: yes
+URL: http://www.bigmemory.org
+LazyLoad: yes
