--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -2,13 +2,14 @@ Package: bigtabulate
 Version: 1.0.5
 Date: 2010-04-08
 Title: table-, tapply-, and aggregate-like functionality for matrix and big.matrix objects.
-Author: John W. Emerson <jayemerson@gmail.com> and Michael J. Kane <kaneplusplus@gmail.com>
-Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
+Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
+Maintainer: Mike and Jay <bigmemoryauthors@gmail.com>
 Depends: methods, foreach
 Suggests: bigmemory (>= 4.0.0), biganalytics
 Description: This package extends the bigmemory package with table-, tapply-, split-,
   and aggregate-like support for big.matrix objects.  The functions may also be
   used with regular R matrices for improving speed and memory-efficiency.
-License: LGPL-3Copyright: (C) 2010 John W. Emerson and Michael J. Kane
+License: LGPL-3
+Copyright: (C) 2010 Michael J. Kane and John W. Emerson
 URL: http://www.bigmemory.org
 LazyLoad: yes
