--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bigtabulate
-Version: 1.0.5
-Date: 2010-04-08
+Version: 1.0.r6
+Date: 2010-04-12
 Title: table-, tapply-, and aggregate-like functionality for matrix and big.matrix objects.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Mike and Jay <bigmemoryauthors@gmail.com>
