--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bigtabulate
-Version: 1.0.r6
+Version: 1.0.6
 Date: 2010-04-12
 Title: table-, tapply-, and aggregate-like functionality for matrix and big.matrix objects.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
