git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@240 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigtabulate/NAMESPACE
+++ b/pkg/bigtabulate/NAMESPACE
@@ -1,4 +1,4 @@
 import(methods)
-export(bigtabulate, bigsplit, bigtable, bigtsummary, bigaggregate)
+export(bigtabulate, bigsplit, bigtable, bigtsummary)
 useDynLib(bigtabulate)
 
