--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: bigtabulate
-Version: 1.0.6
-Date: 2010-04-12
-Title: table-, tapply-, and aggregate-like functionality for matrix and big.matrix objects.
+Version: 1.0.7
+Date: 2010-04-25
+Title: table-, tapply-, and split-like functionality for matrix and big.matrix objects.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Mike and Jay <bigmemoryauthors@gmail.com>
 Depends: methods, foreach
 Suggests: bigmemory (>= 4.0.0), biganalytics
-Description: This package extends the bigmemory package with table-, tapply-, split-,
-  and aggregate-like support for big.matrix objects.  The functions may also be
+Description: This package extends the bigmemory package with table-, tapply-, and
+  split-like support for big.matrix objects.  The functions may also be
   used with regular R matrices for improving speed and memory-efficiency.
 License: LGPL-3
 Copyright: (C) 2010 Michael J. Kane and John W. Emerson
