--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bigmemory
-Version: 4.1.7
-Date: 2010-04-14
-Title: Manage massive matrices with shared memory and memory-mapped files.
+Version: 4.1.8
+Date: 2010-04-25
+Title: Manage massive matrices with shared memory and memory-mapped files
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, utils
