git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@250 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -17,7 +17,7 @@ exportMethods("[", "[<-",
               head, tail,
               typeof,
               dim,
-              is.big.matrix, as.big.matrix,
+              is.big.matrix, as.big.matrix, as.matrix,
               describe,
               attach.resource,
               mwhich,
