--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2010-04-25
 Title: table-, tapply-, and split-like functionality for matrix and big.matrix objects.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Mike and Jay <bigmemoryauthors@gmail.com>
-Depends: methods, foreach
+Depends: methods
 Suggests: bigmemory (>= 4.0.0), biganalytics
 Description: This package extends the bigmemory package with table-, tapply-, and
   split-like support for big.matrix objects.  The functions may also be
