--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -9,6 +9,8 @@ Suggests: foreach, biglm
 Description: This package extends the bigmemory package with various analytics.
   Functions bigkmeans and binit may also be used with native R objects. 
   For tapply-like functions, the bigtabulate package may also be helpful.
+  For linear algebra support, see bigalgebra.  For mutex (locking) support
+  for advanced shared-memory usage, see synchronicity.
 License: LGPL-3
 Copyright: (C) 2010 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
