--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2010-04-25
 Title: BLAS and LAPACK routines for native R matrices and big.matrix objects.
 Author: Michael J. Kane, Bryan Lewis, and John W. Emerson
 Maintainer: Mike <bigmemoryauthors@gmail.com>
-Imports: bigmemory (>= 4.0.0)
+Imports: methods, bigmemory (>= 4.0.0)
 Description: This package provides BLAS and LAPACK routines for R matrix
   and big.matrix objects.
 License: LGPL-3
