git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@324 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigvideo/NAMESPACE
+++ b/pkg/bigvideo/NAMESPACE
@@ -1,4 +1,6 @@
 import(methods)
-export(listfunctionshere)
+export(probecamera, probemovie, testcamera, videobuffer,
+       read.movie, record.video, plotframe, plotpixels)
+S3method(print, videobuffer)
 useDynLib(bigvideo)
 
