git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@326 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigvideo/NAMESPACE
+++ b/pkg/bigvideo/NAMESPACE
@@ -1,6 +1,7 @@
 import(methods)
-export(probecamera, probemovie, testcamera, videobuffer,
-       read.movie, record.video, plotframe, plotpixels)
+export(probe.camera, probe.movie, test.camera, videobuffer,
+       read.movie, record.video, plotframe, plotpixels,
+       init.camera)
 S3method(print, videobuffer)
 useDynLib(bigvideo)
 
