--- a/pkg/bigalgebra/src/Makevars.in
+++ b/pkg/bigalgebra/src/Makevars.in
@@ -1,2 +1,8 @@
 PKG_CPPFLAGS = @BIGALGEBRA_CPPFLAGS@
 PKG_LIBS = @LIBS@
+
+.PHONY: all
+all: @REFBLAS64@ $(SHLIB)
+
+refblas64:
+	cd refblas64; make; cp librefblas64.so ..
