Made refblas64 the default; removed old configure.R and configure.win
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@353 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigalgebra/configure.ac
+++ b/pkg/bigalgebra/configure.ac
@@ -5,6 +5,11 @@ acx_blas_ok=no
 
 AC_ARG_WITH(blas,
 	[AC_HELP_STRING([--with-blas=<lib>], [use BLAS library <lib>])])
+
+if test "$with_blas" == ""; then
+  with_blas="refblas64"
+fi
+
 if test "$with_blas" == "refblas64"; then
   with_blas="-L. -L./src/ -L./src/refblas64/ -L./refblas64/ -lrefblas64"
   make  -C src/refblas64
