Simplified configure script; refblas with 64-bit integer indexing is now default; switched to AMD ACML CBLAS interface; resolved symbol conflict by switching symbols to not use underscores
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@355 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigalgebra/src/Makevars.in
+++ b/pkg/bigalgebra/src/Makevars.in
@@ -2,7 +2,4 @@ PKG_CPPFLAGS = @BIGALGEBRA_CPPFLAGS@
 PKG_LIBS = @LIBS@
 
 .PHONY: all
-all: @REFBLAS64@ $(SHLIB)
-
-refblas64:
-	cd refblas64; make; cp librefblas64.so ..
+all: $(SHLIB)
