git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@404 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2012-04-25
 Title: Boost mutex functionality for R.
 Author: Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
-Depends: methods
+Depends: methods, bigmemory.sri
 Description: This package provides Boost mutex functionality in R.
 OS_type: unix
 License: LGPL-3
