--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: biganalytics
-Version: 1.0.17
-Date: 2012-09-02
+Version: 1.1.0
+Date: 2012-09-12
 Title: A library of utilities for big.matrix objects of package bigmemory.
 Author: John W. Emerson <jayemerson@gmail.com> and Michael J. Kane <kaneplusplus@gmail.com>
-Maintainer: Jay and Mike <bigmemoryauthors@gmail.com>
+Maintainer: John W. Emerson <bigmemoryauthors@gmail.com>
+Contact: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, stats, utils, bigmemory (>= 4.0.0)
 LinkingTo: bigmemory
 Suggests: foreach, biglm
@@ -13,6 +14,7 @@ Description: This package extends the bigmemory package with various analytics.
   For linear algebra support, see bigalgebra.  For mutex (locking) support
   for advanced shared-memory usage, see synchronicity.
 License: LGPL-3
+OS_type: unix
 Copyright: (C) 2012 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
