--- a/pkg/bigmemory.sri/DESCRIPTION
+++ b/pkg/bigmemory.sri/DESCRIPTION
@@ -2,9 +2,10 @@ Package: bigmemory.sri
 Type: Package
 Title: A shared resource interface for Bigmemory Project packages
 Version: 0.1
-Date: 2012-09-02
+Date: 2012-09-12
 Author: Michael J. Kane
-Maintainer: Mike <bigmemoryauthors@gmail.com>
+Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Description: This package provides a shared resource interface for the bigmemory and synchronicity packages.
 License: LGPL-3
 Depends: methods
+Enhances: bigmemory, synchronicity
