--- a/pkg/bigmemory.sri/DESCRIPTION
+++ b/pkg/bigmemory.sri/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: bigmemory.sri
 Type: Package
 Title: A shared resource interface for Bigmemory Project packages
-Version: 0.1
+Version: 0.1.1
 Date: 2012-09-12
 Author: Michael J. Kane
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
+Contact: Michael J. Kane <bigmemoryauthors@gmail.com>
 Description: This package provides a shared resource interface for the bigmemory and synchronicity packages.
 License: LGPL-3
+OS_type: unix
 Depends: methods
 Enhances: bigmemory, synchronicity
