Major update--temporarily pared back functions to focus only on dgemm as a prototype. Methods now always follow standard R memory allocation/side-effect rules. Added a number of global package options for controlling output. Singificant doc and vignette updates describe all the changes in detail. Finally, we now default to using native R blas but still include option for long-integer blas
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@421 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigalgebra/NAMESPACE
+++ b/pkg/bigalgebra/NAMESPACE
@@ -1,11 +1,7 @@
 importFrom("bigmemory", "typeof")
-exportMethods("+")
-export("dgemm", 
-  "dcopy", 
-  "dscal", 
-  "daxpy", 
-  "dgesdd", 
-  "dgeqrf", 
-  "dpotrf", 
-  "dgeev")
+#S4 methods
+exportMethods("%*%")
+#Functions
+export("dgemm")
 useDynLib(bigalgebra)
+
