Pretty damn close to a working 1.0 version, at long last. See the vignette for various BLAS installation options, including an example of using the included large index reference BLAS. The package uses the native R BLAS by default for ease of installation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@422 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigalgebra/NAMESPACE
+++ b/pkg/bigalgebra/NAMESPACE
@@ -1,7 +1,8 @@
 importFrom("bigmemory", "typeof")
 #S4 methods
 exportMethods("%*%")
+exportMethods("Arith")
 #Functions
-export("dgemm")
+export("daxpy")
 useDynLib(bigalgebra)
 
