--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: bigalgebra
-Version: 0.8.0
+Version: 0.8.1
 Date: 2012-11-23
-Title: BLAS and LAPACK routines for native R matrices and big.matrix objects.
+Title: BLAS routines for native R matrices and big.matrix objects.
 Author: Michael J. Kane, Bryan Lewis, and John W. Emerson
 Maintainer: Mike <bigmemoryauthors@gmail.com>
 Imports: methods
 Depends: bigmemory (>= 4.0.0)
 LinkingTo: bigmemory
-Description: This package provides reference BLAS and LAPACK routines for R matrix and big.matrix objects.
+Description: This package provides arithmetic functions for R matrix and big.matrix objects.
 License: LGPL-3
 Copyright: (C) 2010 Michael J. Kane, Bryan Lewis, and John W. Emerson
 URL: http://www.bigmemory.org
