--- a/pkg/bigtabulate/DESCRIPTION
+++ b/pkg/bigtabulate/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: bigtabulate
-Version: 1.1.0
-Date: 2012-09-12
+Version: 1.1.1
+Date: 2012-09-13
 Title: table-, tapply-, and split-like functionality for matrix and big.matrix objects.
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Contact: Jay and Mike <bigmemoryauthors@gmail.com>
 Depends: methods, bigmemory (>= 4.0.0)
-LinkingTo: bigmemory
+LinkingTo: BH, bigmemory
 Suggests: biganalytics
 Description: This package extends the bigmemory package with table- and
   split-like support for big.matrix objects.  The functions may also be
