--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: synchronicity
 Version: 1.1.1
-Date: 2013-03-13
+Date: 2013-03-20
 Title: Boost mutex functionality for R.
 Author: Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Contact: Michael J. Kane <bigmemoryauthors@gmail.com>
-Depends: methods, bigmemory.sri
+Depends: methods, bigmemory.sri, BH
+LinkingTo: BH
 Description: This package provides Boost mutex functionality in R.
 OS_type: unix
 License: LGPL-3
