Optimizations for Get*.bm functions. At C++ level, drop=TRUE is assumed. If drop=FALSE, the vector returned from the C++ code is made into a matrix. Additionally, dimnames setting is skipped if dimnames are NULL. This makes reading single rows and columns considerably faster, especially when dimnames are NULL. Dimname setting code centralized in .addDimnames function. Tests for reading and setting dimnames. Also tests for readonly features.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@436 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bigmemory
-Version: 4.4.2
+Version: 4.4.3
 Date: 2013-03-20
 Title: Manage massive matrices with shared memory and memory-mapped files
 Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
@@ -8,6 +8,7 @@ Contact: Mike and Jay <bigmemoryauthors@gmail.com>
 Depends: methods, utils, bigmemory.sri, BH
 Enhances: biganalytics, bigtabulate, synchronicity
 LinkingTo: BH
+Suggests: RUnit
 Description: Create, store, access, and manipulate massive matrices.
   Matrices are allocated to shared memory and may use memory-mapped
   files.  Packages biganalytics, bigtabulate, synchronicity, and
