--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bigmemory
 Version: 4.4.3
 Date: 2013-03-20
 Title: Manage massive matrices with shared memory and memory-mapped files
-Author: Michael J. Kane <kaneplusplus@gmail.com> and John W. Emerson <jayemerson@gmail.com>
+Author: Michael J. Kane <kaneplusplus@gmail.com>, John W. Emerson <jayemerson@gmail.com>, and Peter Haverty <haverty.peter@gene.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Contact: Mike and Jay <bigmemoryauthors@gmail.com>
 Depends: methods, utils, bigmemory.sri, BH
@@ -15,6 +15,6 @@ Description: Create, store, access, and manipulate massive matrices.
   bigalgebra provide advanced functionality.
 OS_type: unix
 License: LGPL-3
-Copyright: (C) 2013 John W. Emerson and Michael J. Kane
+Copyright: (C) 2013 John W. Emerson, Michael J. Kane, and Peter Haverty
 URL: http://www.bigmemory.org
 LazyLoad: yes
