Added import of BH
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@446 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NAMESPACE
+++ b/pkg/bigmemory/NAMESPACE
@@ -1,4 +1,4 @@
-import(methods, bigmemory.sri)
+import(methods, bigmemory.sri, BH)
 importFrom(utils, head, tail)
 
 exportClasses(big.matrix, big.matrix.descriptor)
