--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Create, store, access, and manipulate massive matrices.
   files.  Packages biganalytics, bigtabulate, synchronicity, and
   bigalgebra provide advanced functionality.
 OS_type: unix
-License: LGPL-3
-Copyright: (C) 2013 John W. Emerson, Michael J. Kane, and Peter Haverty
+License: LGPL-3 | APv2
+Copyright: (C) 2013 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
