git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@459 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -8,7 +8,7 @@ Imports: methods
 Depends: bigmemory (>= 4.0.0)
 LinkingTo: bigmemory
 Description: This package provides arithmetic functions for R matrix and big.matrix objects.
-License: LGPL-3
+License: LGPL-3 | APv2
 Copyright: (C) 2010 Michael J. Kane, Bryan Lewis, and John W. Emerson
 URL: http://www.bigmemory.org
 LazyLoad: yes
