Only linking to BH now, no more Depends.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@461 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -5,7 +5,7 @@ Title: Manage massive matrices with shared memory and memory-mapped files
 Author: Michael J. Kane <kaneplusplus@gmail.com>, John W. Emerson <jayemerson@gmail.com>, and Peter Haverty <haverty.peter@gene.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Contact: Mike and Jay <bigmemoryauthors@gmail.com>
-Depends: methods, utils, bigmemory.sri, BH
+Depends: methods, utils, bigmemory.sri
 Enhances: biganalytics, bigtabulate, synchronicity
 LinkingTo: BH
 Suggests: RUnit
