--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: synchronicity
-Version: 1.1.2
-Date: 2013-11-04
+Version: 1.1.3
+Date: 2014-03-27
 Title: Boost mutex functionality for R.
 Author: Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
@@ -9,7 +9,7 @@ Depends: methods, bigmemory.sri
 LinkingTo: BH
 Description: This package provides Boost mutex functionality in R.
 OS_type: unix
-License: LGPL-3
+License: LGPL-3 | APv2
 Copyright: Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
