--- a/pkg/synchronicity/DESCRIPTION
+++ b/pkg/synchronicity/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: synchronicity
-Version: 1.1.3
+Version: 1.1.4
 Date: 2014-03-27
 Title: Boost mutex functionality for R.
 Author: Michael J. Kane <kaneplusplus@gmail.com>
@@ -9,7 +9,7 @@ Depends: methods, bigmemory.sri
 LinkingTo: BH
 Description: This package provides Boost mutex functionality in R.
 OS_type: unix
-License: LGPL-3 | APv2
+License: LGPL-3 | Apache License 2.0
 Copyright: Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
