--- a/pkg/bigalgebra/DESCRIPTION
+++ b/pkg/bigalgebra/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bigalgebra
-Version: 0.8.3
-Date: 2013-11-04
+Version: 0.8.4
+Date: 2014-04-15
 Title: BLAS routines for native R matrices and big.matrix objects.
 Author: Michael J. Kane, Bryan Lewis, and John W. Emerson
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
@@ -8,8 +8,8 @@ Imports: methods
 Depends: bigmemory (>= 4.0.0)
 LinkingTo: bigmemory
 Description: This package provides arithmetic functions for R matrix and big.matrix objects.
-License: LGPL-3 | APv2
-Copyright: (C) 2010 Michael J. Kane, Bryan Lewis, and John W. Emerson
+License: LGPL-3 | Apache License 2.0
+Copyright: (C) 2014 Michael J. Kane, Bryan Lewis, and John W. Emerson
 URL: http://www.bigmemory.org
 LazyLoad: yes
 Packaged: 2012-12-26 22:17:06 UTC; blewis
