--- a/pkg/bigmemory/DESCRIPTION
+++ b/pkg/bigmemory/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bigmemory
-Version: 4.4.9
-Date: 2014-03-27
+Version: 4.4.10
+Date: 2014-05-26
 Title: Manage massive matrices with shared memory and memory-mapped files
 Author: Michael J. Kane <kaneplusplus@gmail.com>, John W. Emerson <jayemerson@gmail.com>, and Peter Haverty <haverty.peter@gene.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
@@ -14,7 +14,7 @@ Description: Create, store, access, and manipulate massive matrices.
   files.  Packages biganalytics, bigtabulate, synchronicity, and
   bigalgebra provide advanced functionality.
 OS_type: unix
-License: LGPL-3 | APv2
+License: LGPL-3 | Apache License 2.0
 Copyright: (C) 2014 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
