--- a/pkg/bigmemory.sri/DESCRIPTION
+++ b/pkg/bigmemory.sri/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: bigmemory.sri
 Type: Package
 Title: A shared resource interface for Bigmemory Project packages
-Version: 0.1.2
-Date: 2012-09-15
+Version: 0.1.3
+Date: 2012-08-17
 Author: Michael J. Kane
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
 Contact: Michael J. Kane <bigmemoryauthors@gmail.com>
 Description: This package provides a shared resource interface for the bigmemory and synchronicity packages.
-License: LGPL-3
-OS_type: unix
-Depends: methods
+License: LGPL-3 | Apache License 2.0
+Imports: methods
 Enhances: bigmemory, synchronicity
