--- a/pkg/biganalytics/DESCRIPTION
+++ b/pkg/biganalytics/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: biganalytics
-Version: 1.1.2
-Date: 2012-11-04
+Version: 1.1.3
+Date: 2014-09-08
 Title: A library of utilities for big.matrix objects of package bigmemory.
 Author: John W. Emerson <jayemerson@gmail.com> and Michael J. Kane <kaneplusplus@gmail.com>
 Maintainer: Michael J. Kane <bigmemoryauthors@gmail.com>
@@ -13,8 +13,7 @@ Description: This package extends the bigmemory package with various analytics.
   For tapply-like functions, the bigtabulate package may also be helpful.
   For linear algebra support, see bigalgebra.  For mutex (locking) support
   for advanced shared-memory usage, see synchronicity.
-License: LGPL-3
-OS_type: unix
+License: LGPL-3 | Apache License 2.0
 Copyright: (C) 2013 John W. Emerson and Michael J. Kane
 URL: http://www.bigmemory.org
 LazyLoad: yes
